# CuraEngine-Docker

./: docker-compose.yml  setup.sh
src/: .gitignore  Dockerfile  build_wasm.sh  install_cura.sh
src/cura-engine/printer-settings/: printer-settings
src/cura-engine/protobuf-3.6.1/: autogen.sh  protobuf
src/cura_wasm/: CMakeLists.txt  endpoints.cpp
src/server/: slice.js
